Made layout and style changes for work experience section.

--- a/src/templates/template-0/resume.html
+++ b/src/templates/template-0/resume.html
@@ -70,6 +70,107 @@
             <!-- Experience -->
             <section class="mt-[16pt] font-secondary">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Experience</h2>
+                <section class="pl-[0pt]">
+                    <!-- company details -->
+                    <section class="pt-[4pt] pb-[2pt] flex items-center justify-start">
+                        <div class="w-[16pt] h-[16pt] borde pb-[2pt] flex items-center justify-center">
+                            <i class="fas fa-building text-[12pt] text-sky-500"></i>
+                        </div>
+                        <h3 class="ml-[8pt]">Company name, company location.</h3>
+                    </section>
+                    <!-- position 1 -->
+                    <section>
+                        <!-- position title -->
+                        <div class="pt-[2pt] pb-[4pt] flex items-center justify-start">
+                            <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                                <i class="fas fa-circle text-[6pt] text-gray-400"></i>
+                            </div>
+                            <p class="ml-[8pt]">Position, MMM YYYY - Current</p>
+                        </div>
+                        <div class="flex justify-start">
+                            <div class="w-[26pt] borde flex justify-center">
+                                <div class="w-[1pt] border-l border-[1pt] border-gray-200"></div>
+                            </div>
+                            <!-- projects container -->
+                            <div class="borde ml-[8pt]">
+                                <!-- project 1 -->
+                                <div>
+                                    <!-- project title -->
+                                    <div class="flex items-center justify-start">
+                                        <div class="flex items-center justify-center">
+                                            <i class="fas fa-code text-sky-500"></i>
+                                        </div>
+                                        <p class="ml-[8pt]">Project Title</p>
+                                    </div>
+                                    <!-- project details -->
+                                    <div class="border-0 ml-[18pt]">
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    </div>
+                                </div>
+                                <!-- project 2 -->
+                                <div class="mt-[6pt]">
+                                    <!-- project title -->
+                                    <div class="flex items-center justify-start">
+                                        <div class="flex items-center justify-center">
+                                            <i class="fas fa-code text-sky-500"></i>
+                                        </div>
+                                        <p class="ml-[8pt]">Project Title</p>
+                                    </div>
+                                    <!-- project details -->
+                                    <div class="border-0 ml-[18pt]">
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <!-- position 2 -->
+                    <section>
+                        <!-- position title -->
+                        <div class="py-[4pt] flex items-center justify-start">
+                            <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                                <i class="fas fa-circle text-[6pt] text-gray-400"></i>
+                            </div>
+                            <p class="ml-[8pt]">Position, MMM YYYY - MMM YYYY</p>
+                        </div>
+                        <div class="flex justify-start">
+                            <div class="w-[26pt] borde flex justify-center">
+                                <div class="w-[1pt] border-l border-[1pt] border-gray-200"></div>
+                            </div>
+                            <!-- projects container -->
+                            <div class="ml-[8pt]">
+                                <!-- project 1 -->
+                                <div>
+                                    <!-- project title -->
+                                    <div class="flex items-center justify-start">
+                                        <div class="flex items-center justify-center">
+                                            <i class="fas fa-code text-sky-500"></i>
+                                        </div>
+                                        <p class="ml-[8pt]">Project Title</p>
+                                    </div>
+                                    <!-- project details -->
+                                    <div class="border-0 ml-[18pt]">
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    </div>
+                                </div>
+                                <!-- project 2 -->
+                                <div class="mt-[6pt]">
+                                    <!-- project title -->
+                                    <div class="flex items-center justify-start">
+                                        <div class="flex items-center justify-center">
+                                            <i class="fas fa-code text-sky-500"></i>
+                                        </div>
+                                        <p class="ml-[8pt]">Project Title</p>
+                                    </div>
+                                    <!-- project details -->
+                                    <div class="border-0 ml-[18pt]">
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </section>
             </section>
 
             <!-- Skills -->
