Layout and style changes for education, certificates.

--- a/src/templates/template-0/resume.html
+++ b/src/templates/template-0/resume.html
@@ -33,7 +33,7 @@
         }
 
         li::marker {
-            font-size: 10pt;
+            font-size: 12pt;
             color: #0ea5e9;
         }
     </style>
@@ -176,32 +176,32 @@
             <!-- Skills -->
             <section class="mt-[16pt] font-secondary">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Skills</h2>
-                <ul class="list-disc list-inside">
-                    <li class="pl-[4pt]">
+                <ul class="pt-[4pt] list-disc list-inside">
+                    <li class="pl-[6pt]">
                         skill-0
                         <span class="mx-[4pt] text-sky-500">|</span>
                         skill-1
                         <span class="mx-[4pt] text-sky-500">|</span>
                         skill-2
                     </li>
-                    <li class="pl-[4pt]">
+                    <li class="pl-[6pt]">
                         skill-3
                         <span class="mx-[4pt] text-sky-500">|</span>
                         skill-4
                     </li>
-                    <li class="pl-[4pt]">
+                    <li class="pl-[6pt]">
                         skill-5
                         <span class="mx-[4pt] text-sky-500">|</span>
                         skill-6
                         <span class="mx-[4pt] text-sky-500">|</span>
                         skill-7
                     </li>
-                    <li class="pl-[4pt]">
+                    <li class="pl-[6pt]">
                         skill-8
                         <span class="mx-[4pt] text-sky-500">|</span>
                         skill-9
                     </li>
-                    <li class="pl-[4pt]">
+                    <li class="pl-[6pt]">
                         skill-10
                         <span class="mx-[4pt] text-sky-500">|</span>
                         skill-11
@@ -218,20 +218,53 @@
             <!-- Education -->
             <section class="mt-[16pt] font-secondary">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Education</h2>
+                <section class="pt-[4pt] pb-[2pt] flex items-start justify-start">
+                    <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                        <i class="fas fa-university text-[10pt] text-sky-500"></i>
+                    </div>
+                    <div class="pl-[8pt]">
+                        <h3 class="h-[16pt] pt-[2pt] borde flex items-center">University name, location.</h3>
+                        <p class="">Degree</p>
+                    </div>
+                </section>
+                <section class="py-[2pt] flex items-start justify-start">
+                    <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                        <i class="fas fa-university text-[10pt] text-sky-500"></i>
+                    </div>
+                    <div class="pl-[8pt]">
+                        <h3 class="h-[16pt] pt-[2pt] borde flex items-center">University name, location.</h3>
+                        <p class="">Degree</p>
+                    </div>
+                </section>
+                <section class="pt-[4pt] flex items-start justify-start">
+                    <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                        <i class="fas fa-university text-[10pt] text-sky-500"></i>
+                    </div>
+                    <div class="pl-[8pt]">
+                        <h3 class="h-[16pt] pt-[2pt] borde flex items-center">University name, location.</h3>
+                        <p class="">Degree</p>
+                    </div>
+                </section>
             </section>
 
             <!-- Certifications -->
             <section class="mt-[16pt] font-secondary">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Certifications</h2>
+                <section class="pt-[4pt] pb-[2pt] pl-[1pt] flex items-start justify-start">
+                    <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                        <i class="fas fa-certificate text-[8pt] text-sky-500"></i>
+                    </div>
+                    <p class="h-[16pt] pt-[2pt] pl-[8pt] flex items-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </section>
             </section>
 
             <!-- Languages -->
             <section class="mt-[16pt] font-secondary">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Languages</h2>
                 <ul class="list-disc list-inside">
-                    <li class="pl-[4pt]">Language 1</li>
-                    <li class="pl-[4pt]">Language 2</li>
-                    <li class="pl-[4pt]">Language 3</li>
+                    <li class="pl-[6pt]">Language 1</li>
+                    <li class="pl-[6pt]">Language 2</li>
+                    <li class="pl-[6pt]">Language 3</li>
                 </ul>
             </section>
         </main>
