Removed temporary changes.

--- a/src/templates/template-0/resume.html
+++ b/src/templates/template-0/resume.html
@@ -33,7 +33,7 @@
         }
 
         li::marker {
-            font-size: 12pt;
+            font-size: 11pt;
             color: #0ea5e9;
         }
     </style>
@@ -73,7 +73,7 @@
                 <section class="pl-[0pt]">
                     <!-- company details -->
                     <section class="pt-[4pt] pb-[2pt] flex items-center justify-start">
-                        <div class="w-[16pt] h-[16pt] borde pb-[2pt] flex items-center justify-center">
+                        <div class="w-[16pt] h-[16pt] pb-[2pt] flex items-center justify-center">
                             <i class="fas fa-building text-[12pt] text-sky-500"></i>
                         </div>
                         <h3 class="ml-[8pt]">Company name, company location.</h3>
@@ -82,17 +82,17 @@
                     <section>
                         <!-- position title -->
                         <div class="pt-[2pt] pb-[4pt] flex items-center justify-start">
-                            <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                            <div class="w-[16pt] h-[16pt] flex items-center justify-center">
                                 <i class="fas fa-circle text-[6pt] text-gray-400"></i>
                             </div>
                             <p class="ml-[8pt]">Position, MMM YYYY - Current</p>
                         </div>
                         <div class="flex justify-start">
-                            <div class="w-[26pt] borde flex justify-center">
+                            <div class="w-[26pt] flex justify-center">
                                 <div class="w-[1pt] border-l border-[1pt] border-gray-200"></div>
                             </div>
                             <!-- projects container -->
-                            <div class="borde ml-[8pt]">
+                            <div class="ml-[8pt]">
                                 <!-- project 1 -->
                                 <div>
                                     <!-- project title -->
@@ -128,13 +128,13 @@
                     <section>
                         <!-- position title -->
                         <div class="py-[4pt] flex items-center justify-start">
-                            <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                            <div class="w-[16pt] h-[16pt] flex items-center justify-center">
                                 <i class="fas fa-circle text-[6pt] text-gray-400"></i>
                             </div>
                             <p class="ml-[8pt]">Position, MMM YYYY - MMM YYYY</p>
                         </div>
                         <div class="flex justify-start">
-                            <div class="w-[26pt] borde flex justify-center">
+                            <div class="w-[26pt] flex justify-center">
                                 <div class="w-[1pt] border-l border-[1pt] border-gray-200"></div>
                             </div>
                             <!-- projects container -->
@@ -219,29 +219,29 @@
             <section class="mt-[16pt] font-secondary">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Education</h2>
                 <section class="pt-[4pt] pb-[2pt] flex items-start justify-start">
-                    <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                    <div class="w-[16pt] h-[16pt] flex items-center justify-center">
                         <i class="fas fa-university text-[10pt] text-sky-500"></i>
                     </div>
                     <div class="pl-[8pt]">
-                        <h3 class="h-[16pt] pt-[2pt] borde flex items-center">University name, location.</h3>
+                        <h3 class="h-[16pt] pt-[2pt] flex items-center">University name, location.</h3>
                         <p class="">Degree</p>
                     </div>
                 </section>
                 <section class="py-[2pt] flex items-start justify-start">
-                    <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                    <div class="w-[16pt] h-[16pt] flex items-center justify-center">
                         <i class="fas fa-university text-[10pt] text-sky-500"></i>
                     </div>
                     <div class="pl-[8pt]">
-                        <h3 class="h-[16pt] pt-[2pt] borde flex items-center">University name, location.</h3>
+                        <h3 class="h-[16pt] pt-[2pt] flex items-center">University name, location.</h3>
                         <p class="">Degree</p>
                     </div>
                 </section>
                 <section class="pt-[4pt] flex items-start justify-start">
-                    <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                    <div class="w-[16pt] h-[16pt] flex items-center justify-center">
                         <i class="fas fa-university text-[10pt] text-sky-500"></i>
                     </div>
                     <div class="pl-[8pt]">
-                        <h3 class="h-[16pt] pt-[2pt] borde flex items-center">University name, location.</h3>
+                        <h3 class="h-[16pt] pt-[2pt] flex items-center">University name, location.</h3>
                         <p class="">Degree</p>
                     </div>
                 </section>
@@ -251,7 +251,7 @@
             <section class="mt-[16pt] font-secondary">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Certifications</h2>
                 <section class="pt-[4pt] pb-[2pt] pl-[1pt] flex items-start justify-start">
-                    <div class="w-[16pt] h-[16pt] borde flex items-center justify-center">
+                    <div class="w-[16pt] h-[16pt] flex items-center justify-center">
                         <i class="fas fa-certificate text-[8pt] text-sky-500"></i>
                     </div>
                     <p class="h-[16pt] pt-[2pt] pl-[8pt] flex items-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
